<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.sitepark.ies</groupId>
	<artifactId>ies-mediarepository-core</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	<name>IES Media Repository Core</name>
	<description>IES mediarepository domain und use-case implementations</description>
	<url>https://github.com/sitepark/ies-mediarepository-core</url>

	<organization>
		<name>Sitepark</name>
		<url>https://www.sitepark.com</url>
	</organization>

	<licenses>
		<license>
			<name>The MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>veltrup@sitepark</id>
			<name>Holger Veltrup</name>
			<email>veltrup@sitepark.com</email>
			<url>https://github.com/sitepark-veltrup</url>
			<organization>Sitepark</organization>
			<organizationUrl>https://www.sitepark.com</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>Europe/Berlin</timezone>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:sitepark/ies-mediarepository-core.git</connection>
		<developerConnection>scm:git:git@github.com:sitepark/ies-mediarepository-core.git</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/sitepark/ies-mediarepository-core</url>
	</scm>

	<properties>
		<junit.version>5.10.2</junit.version>
		<spotbugs.version>4.8.3</spotbugs.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
		<gpg.skip>true</gpg.skip>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-bom</artifactId>
				<version>2.24.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<dependency>
			<groupId>com.github.spotbugs</groupId>
			<artifactId>spotbugs-annotations</artifactId>
			<version>4.9.1</version>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>jakarta.inject</groupId>
			<artifactId>jakarta.inject-api</artifactId>
			<version>2.0.1.MR</version>
		</dependency>

		<!-- Test-Dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.15.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>nl.jqno.equalsverifier</groupId>
			<artifactId>equalsverifier</artifactId>
			<version>3.19.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.jparams</groupId>
			<artifactId>to-string-verifier</artifactId>
			<version>1.4.8</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<compilerArgs>
						<arg>-proc:none</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<consoleOutputReporter>
						<disable>true</disable>
					</consoleOutputReporter>
					<statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter">
						<theme>UNICODE</theme>
						<hideResultsOnSuccess>true</hideResultsOnSuccess>
					</statelessTestsetInfoReporter>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>me.fabriciorby</groupId>
						<artifactId>maven-surefire-junit5-tree-reporter</artifactId>
						<version>1.4.0</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<goals>
							<goal>sign</goal>
						</goals>
						<phase>verify</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<scmCommentPrefix>ci(release):</scmCommentPrefix>
					<tagNameFormat>@{project.version}</tagNameFormat>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.4.1</version>
				<dependencies>
					<dependency>
						<groupId>io.github.thefolle</groupId>
						<artifactId>glowing-waffle</artifactId>
						<version>1.2.0</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<banDuplicatePomDependencyVersions></banDuplicatePomDependencyVersions>
								<requireMavenVersion>
									<version>3.8</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>21</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
					<execution>
						<id>verify-release</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<phase>none</phase>
						<configuration>
							<rules>
								<requireReleaseDeps>
									<failWhenParentIsSnapshot>false</failWhenParentIsSnapshot>
									<message>No Snapshots Allowed!</message>
								</requireReleaseDeps>
								<requireReleaseDepsInPlugins implementation="org.apache.maven.enforcer.rule.requireReleaseDepsInPlugins"></requireReleaseDepsInPlugins>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<element>PACKAGE</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.0</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
					<execution>
						<id>generate-code-coverage-report</id>
						<goals>
							<goal>report</goal>
						</goals>
						<phase>test</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.43.0</version>
				<configuration>
					<!-- define a language-specific format -->
					<java>
						<removeUnusedImports>
							<engine>google-java-format</engine>
						</removeUnusedImports>

						<!-- apply a specific flavor of google-java-format and reflow long strings -->
						<googleJavaFormat>
							<version>1.19.2</version>
							<style>GOOGLE</style>
							<reflowLongStrings>true</reflowLongStrings>
							<formatJavadoc>false</formatJavadoc>
						</googleJavaFormat>
						<formatAnnotations></formatAnnotations>
					</java>
					<pom>
						<!-- These are the defaults, you can override if you want -->
						<includes>
							<include>pom.xml</include>
						</includes>
						<sortPom>
							<!--  value of -1 indicates that a tab character should be used instead -->
							<nrOfIndentSpace>-1</nrOfIndentSpace>
						</sortPom>
					</pom>
				</configuration>
				<executions>
					<execution>
						<?m2e ignore?>
						<id>spotless-check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<phase>verify</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.9.1.0</version>
				<configuration>
					<effort>Max</effort>
					<threshold>Low</threshold>
					<maxRank>20</maxRank>
					<excludeFilterFile>spotbug-exclude-filter.xml</excludeFilterFile>
				</configuration>
				<!-- https://spotbugs.readthedocs.io/en/latest/maven.html -->
				<dependencies>
					<!-- overwrite dependency on spotbugs if you want to specify the version of
                    spotbugs -->
					<dependency>
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs</artifactId>
						<version>4.9.1</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
						<phase>verify</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.26.0</version>
				<configuration>
					<rulesets>
						<ruleset>pmd-ruleset.xml</ruleset>
					</rulesets>
					<includeTests>true</includeTests>
					<failOnViolation>true</failOnViolation>
					<failurePriority>1</failurePriority>
					<printFailingErrors>true</printFailingErrors>
					<linkXRef>false</linkXRef>
				</configuration>
				<executions>
					<execution>
						<id>pmd</id>
						<goals>
							<goal>check</goal>
						</goals>
						<phase>verify</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>publish-release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.5.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<autoPublish>true</autoPublish>
							<waitUntil>published</waitUntil>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
